resultsstream: Delay the entry loading into the event look

Otherwise we fetch them before the client might finish the load before
loadEntries end and d->properties might mutate.

BUG: 473472